--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "babel-core": "6.23.1",
-    "babel-loader": "6.3.1",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.3.1",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.23.0",
     "babel-preset-stage-0": "6.22.0",
@@ -41,8 +42,8 @@
     "sass-loader": "6.0.0",
     "sockjs-client": "^1.1.2",
     "style-loader": "0.13.1",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
     "react": "15.4.2",
