--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {
+    "express": "4.15.4",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "ws": "3.1.0"
   }
 }
